--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,15 +6,16 @@
     "module": "ESNext",
     "skipLibCheck": true,
 
-    /* Bundler mode */
+    /* bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "types": ["vitest/globals"],
 
-    /* Linting */
+    /* linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
